--- a/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli_starter.ipynb
@@ -4,11 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Heroes Of Pymoli Data Analysis\n",
+    "# Heroes Of Pymoli Data Analysis (3 OBSERVABLE TRENDS BELOW)\n",
     "* Of the 1163 active players, the vast majority are male (84%). There also exists, a smaller, but notable proportion of female players (14%).\n",
     "\n",
     "* Our peak age demographic falls between 20-24 (44.8%) with secondary groups falling between 15-19 (18.60%) and 25-29 (13.4%).  \n",
-    "-----"
+    "-----\n",
+    "****************3 OBSERVABLE TRENDS***************\n",
+    "Trend ONE:  More men play Heroes of Pymoli than women.  84% (484 count) of men play compared to 14% (81 count) of women.  However, women spend more money than men on the game.  Women spend $4.46 on average per game compared to men spending only $4.06 per game.\n",
+    "\n",
+    "Trend TWO:  Most players are 20-24 years old.  44% (258 count) are in this age bracket.  However, they do not spend a lot on the games they play.  Players under 10 years old spend $4.53 on average per person while players between 39-39 spend the most on games averaging $4.76 per person.\n",
+    "\n",
+    "Trend THREE:  Of all the games the Oath Breaker, Last Hope of the Breaker Storm is the most popular game with 12 purchases at $4.23 each.  Interestingly, the top spender spends buys an average of $3.79 per game.  This is less than the cost of the most popular game\n",
+    "\n"
    ]
   },
   {
@@ -21,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +132,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,8 +144,6 @@
     "\n",
     "# File to Load (Remember to Change These)\n",
     "file_to_load = '../Resources/purchase_data.csv'\n",
-    "#http://localhost:8786/notebooks/HeroesOfPymoli_starter.ipynb\n",
-    "\n",
     "\n",
     "# Read Purchasing File and store into Pandas data frame\n",
     "purchase_data_df = pd.read_csv(file_to_load)\n",
@@ -161,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +207,7 @@
        "0            576"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -292,7 +297,7 @@
        "0        2379.77  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +399,7 @@
        "Other / Non-Disclosed           11               1.909722"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +523,7 @@
        "Other / Non-Disclosed                 50.19                       4.562727  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +658,7 @@
        "4   Male      Iskosia90   23      20-24"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +770,7 @@
        "40+             12            2.083333"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +939,7 @@
        ">40                         3.186667  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1076,7 @@
        "Iskadarya95               3                4.366667                  13.10"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1232,7 @@
        "19      Pursuit, Cudgel of Necromancy                                 8.16  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1286,6 +1291,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -1308,72 +1326,97 @@
        "      <th>178</th>\n",
        "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
        "      <td>12</td>\n",
-       "      <td>$4.23</td>\n",
-       "      <td>$50.76</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>50.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>82</th>\n",
        "      <th>Nirvana</th>\n",
        "      <td>9</td>\n",
-       "      <td>$4.90</td>\n",
-       "      <td>$44.10</td>\n",
+       "      <td>4.90</td>\n",
+       "      <td>44.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>145</th>\n",
        "      <th>Fiery Glass Crusader</th>\n",
        "      <td>9</td>\n",
-       "      <td>$4.58</td>\n",
-       "      <td>$41.22</td>\n",
+       "      <td>4.58</td>\n",
+       "      <td>41.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>92</th>\n",
        "      <th>Final Critic</th>\n",
        "      <td>8</td>\n",
-       "      <td>$4.88</td>\n",
-       "      <td>$39.04</td>\n",
+       "      <td>4.88</td>\n",
+       "      <td>39.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>103</th>\n",
        "      <th>Singed Scalpel</th>\n",
        "      <td>8</td>\n",
-       "      <td>$4.35</td>\n",
-       "      <td>$34.80</td>\n",
+       "      <td>4.35</td>\n",
+       "      <td>34.80</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                     Purchase Count  \\\n",
-       "Item ID Item Name                                                     \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm             12   \n",
-       "82      Nirvana                                                   9   \n",
-       "145     Fiery Glass Crusader                                      9   \n",
-       "92      Final Critic                                              8   \n",
-       "103     Singed Scalpel                                            8   \n",
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "82      Nirvana                                                    9   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "92      Final Critic                                               8   \n",
+       "103     Singed Scalpel                                             8   \n",
        "\n",
-       "                                                     Item Price  \\\n",
-       "Item ID Item Name                                                 \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
-       "82      Nirvana                                           $4.90   \n",
-       "145     Fiery Glass Crusader                              $4.58   \n",
-       "92      Final Critic                                      $4.88   \n",
-       "103     Singed Scalpel                                    $4.35   \n",
+       "                                                      Item Price  \\\n",
+       "Item ID Item Name                                                  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm        4.23   \n",
+       "82      Nirvana                                             4.90   \n",
+       "145     Fiery Glass Crusader                                4.58   \n",
+       "92      Final Critic                                        4.88   \n",
+       "103     Singed Scalpel                                      4.35   \n",
        "\n",
-       "                                                     Total Purchase Value  \n",
-       "Item ID Item Name                                                          \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
-       "82      Nirvana                                                    $44.10  \n",
-       "145     Fiery Glass Crusader                                       $41.22  \n",
-       "92      Final Critic                                               $39.04  \n",
-       "103     Singed Scalpel                                             $34.80  "
+       "                                                      Total Purchase Value  \n",
+       "Item ID Item Name                                                           \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm                 50.76  \n",
+       "82      Nirvana                                                      44.10  \n",
+       "145     Fiery Glass Crusader                                         41.22  \n",
+       "92      Final Critic                                                 39.04  \n",
+       "103     Singed Scalpel                                               34.80  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "#Most Profitable Items\n",
+    "\n",
+    "#Identify the 5 most profitable items by total purchase value, then list (in a table):\n",
+    "\n",
+    "mostprofit_df = pd.DataFrame(purchase_data_df)\n",
+    "mostprofit_group = mostprofit_df.groupby(['Item ID','Item Name'])\n",
+    "mostprofit_df = pd.DataFrame({\"Purchase Count\":mostprofit_group[\"Price\"].count(), \n",
+    "                              \"Item Price\":mostprofit_group[\"Price\"].mean(),\n",
+    "                              \"Total Purchase Value\":mostprofit_group[\"Price\"].sum()})\n",
+    "\n",
+    "#Perform calculations to obtain purchase count, item price, and total purchase value\n",
+    "#Sort the purchase item column in descending order\n",
+    "mostprofit_df = mostprofit_df.sort_values(\"Total Purchase Value\", ascending=False)\n",
+    "mostprofit_df[\"Item Price\"] = mostprofit_df[\"Item Price\"]\n",
+    "mostprofit_df[\"Total Purchase Value\"] = mostprofit_df[\"Total Purchase Value\"]\n",
+    "\n",
+    "mostprofit_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
